--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
+.main_video_frame {
+    width: 800px;
+    height: 600px;
+}
+.video_container {
+    width: 100%;
+    height: 100%;
+}
+.menu {
+    background-color: black;
+}
 .menu_button {
     background-color: transparent;
     border-style: none;
