--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 .main_video_frame {
-    width: 800px;
-    height: 600px;
+    min-height: 95%;
+    width: 95%;
     box-shadow: 0 0 30px rgba(0,0,0,75);
+    display: flex;
+    flex-direction: column;
 }
 .video_container {
-    width: 100%;
-    height: 100%;
+    flex: 2 1 100px;
 }
 .menu {
     background-color: black;
