--- a/main.css
+++ b/main.css
@@ -37,14 +37,18 @@ BODY {
     /* width: 50pt; */
     /* margin: 1px; */
     padding: 10px;
-    padding-bottom: 13px;
+    padding-bottom: 12px;
     /* padding-right: 10px; */
     flex-grow: 0;
 }
 
 .fa {
-    /* font-family: "Roboto";
-    font-weight: 400; */
     color: white;
     font-size: 15pt;
+}
+
+.vp_menu_duration {
+    color: white;
+    font-family: "Roboto";
+    font-weight: 400;
 }
