--- a/main.css
+++ b/main.css
@@ -6,10 +6,19 @@ BODY {
     height: 100%;
 }
 
-.vp_empty_button {
+.vp_pb {
+    background-color: grey;
+    height: 5px !important; 
     flex-grow: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
 }
-
+.vp_pb_p {
+    background-color: red;
+    height: 5px;
+    border-radius: 5px;
+}
 .vp_main_vf {
     height: 600px;
     width: 800px;
