--- a/main.css
+++ b/main.css
@@ -19,6 +19,18 @@ BODY {
     height: 5px;
     border-radius: 5px;
 }
+.vp_pb_slider {
+    height: 7px;
+    width: 7px;
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
+    margin-left: -5px;
+    margin-right: 5px;
+}
 .vp_main_vf {
     height: 600px;
     width: 800px;
