--- a/main.css
+++ b/main.css
@@ -70,6 +70,8 @@ BODY {
 }
 
 .vp_menu_button {
+    height: 10px;
+    width: 10px;
     background-color: transparent;
     border-style: none;
     cursor: pointer;
