--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ BODY {
     opacity: 1;
     transition-timing-function: ease-in;
     transition-duration: 300ms;
+    cursor: pointer;
 }
 
 .vp_pb_slider {
@@ -70,8 +71,8 @@ BODY {
 }
 
 .vp_menu_button {
-    height: 10px;
-    width: 10px;
+    height: 35pt;
+    width: 35pt;
     background-color: transparent;
     border-style: none;
     cursor: pointer;
