--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ BODY {
     flex-direction: row;
     display: flex;
     align-items: center;
+
 }
 .vp_pb_l {
     background-color: grey;
@@ -64,6 +65,7 @@ BODY {
     box-shadow: 0 0 30px rgba(0,0,0,30);
     display: flex;
     flex-direction: column;
+
 }
 
 .vp_video_container {
@@ -75,6 +77,7 @@ BODY {
     display: flex;
     align-items: center;
     flex-direction: row;
+    font-size: 16px;
 }
 
 .vp_menu_button {
@@ -94,4 +97,5 @@ BODY {
     color: white;
     font-family: "Roboto";
     font-weight: 400;
+
 }
